# stylus-sipb

./: .gitignore  Cargo.toml  README.md
.cargo/: mutants.toml
.github/workflows/: ci.yml
crates/stylus-bindgen/: Cargo.toml
crates/stylus-bindgen/src/: main.rs
crates/stylus-bindgen/tests/: fixtures.rs  golden.rs  output_properties.rs
crates/stylus-bindgen/tests/common/: mod.rs
crates/stylus-bindgen/tests/expected/: erc1155.rs
crates/stylus-interfaces/src/: erc1155.rs  erc20.rs  erc721.rs  ierc165.rs  lib.rs
